--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,13 @@
 #bar-chart {
-  height: 100%;
+  height: 80%;
+}
+
+.bar-value {
+  fill: red;
+  stroke: black
+}
+
+.bar-consensus {
+  fill: green;
+  stroke: black
 }
