--- a/public/style.css
+++ b/public/style.css
@@ -1,2 +1,10 @@
 #bar-chart {
-  height: 100%; }
+  height: 80%; }
+
+.bar-value {
+  fill: red;
+  stroke: black; }
+
+.bar-consensus {
+  fill: green;
+  stroke: black; }
