--- a/public/style.css
+++ b/public/style.css
@@ -13,8 +13,25 @@
   fill: white; }
 
 #slider {
-  margin-top: 13px; }
+  margin-top: 2.9vh; }
+
+.slider-label {
+  margin-top: 2.4vh;
+  font-size: 0.88vw;
+  font-weight: bold;
+  padding-left: 0;
+  padding-right: 0; }
 
 .axis {
+  font-weight: 500;
+  font-size: 0.83vw; }
+
+.axis-label {
+  font-size: 0.88vw;
   font-weight: bold;
-  font-size: 15px; }
+  fill: black;
+  text-anchor: middle; }
+
+#bar-chart-legend {
+  height: 10%;
+  font-size: 0.83vw; }
