--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,10 @@
+/* Heading Styles */
+#dashboard-heading {
+  height: 3%; }
+
+/* Bar Chart Styles */
 #bar-chart {
-  height: 80%; }
+  height: 70%; }
 
 .bar-value, .swatch-value {
   fill: #e31a1c;
@@ -12,16 +17,6 @@
 .blank {
   fill: white; }
 
-#slider {
-  margin-top: 2.9vh; }
-
-.slider-label {
-  margin-top: 2.4vh;
-  font-size: 0.88vw;
-  font-weight: bold;
-  padding-left: 0;
-  padding-right: 0; }
-
 .axis {
   font-weight: 500;
   font-size: 0.83vw; }
@@ -32,6 +27,52 @@
   fill: black;
   text-anchor: middle; }
 
+/* Overall Control and Legend Styles */
+#control-row {
+  margin: 0;
+  height: 22%; }
+
+#mixer {
+  height: 100%;
+  border: black 3px; }
+
+.mixer-border {
+  stroke: black;
+  fill: white; }
+
 #bar-chart-legend {
-  height: 10%;
+  height: 100%;
   font-size: 0.83vw; }
+
+/* Slider Styles */
+.slider-label {
+  font-size: 0.83vw;
+  text-anchor: middle; }
+
+.ticks {
+  font: 10px sans-serif; }
+
+.track,
+.track-inset,
+.track-overlay {
+  stroke-linecap: round; }
+
+.track {
+  stroke: #000;
+  stroke-opacity: 0.3;
+  stroke-width: 10px; }
+
+.track-inset {
+  stroke: #ddd;
+  stroke-width: 8px; }
+
+.track-overlay {
+  pointer-events: stroke;
+  stroke-width: 50px;
+  cursor: crosshair; }
+
+.handle {
+  fill: #fff;
+  stroke: #000;
+  stroke-opacity: 0.5;
+  stroke-width: 1.25px; }
