--- a/css/style.scss
+++ b/css/style.scss
@@ -39,6 +39,11 @@ $axis-legend-font-size: .83vw;
   text-anchor: middle;
 }
 
+#bar-chart-legend {
+  height: 100%;
+  font-size: $axis-legend-font-size;
+}
+
 /* Overall Control and Legend Styles */
 #control-row {
   margin: 0;
@@ -50,22 +55,37 @@ $axis-legend-font-size: .83vw;
   border: black 3px;
 }
 
-.mixer-border {
+.slider-guide {
   stroke: black;
-  fill: white;
+  stroke-width: 0.25vh;
+  stroke-dasharray: 5, 5;
 }
 
-
-
-#bar-chart-legend {
-  height: 100%;
-  font-size: $axis-legend-font-size;
-}
 
 /* Slider Styles */
 .slider-label {
   font-size: $axis-legend-font-size;
   text-anchor: middle;
+}
+
+.slider-guide-text, .slider-percentage {
+  font-size: $axis-legend-font-size;
+  alignment-baseline: middle;
+  baseline-shift: -5%; /* Fix the "not quite right" vertical alignment */
+}
+
+.slider-guide-text {
+  text-anchor: end;
+}
+
+.slider-percentage {
+  text-anchor: start;
+}
+
+.handle-label {
+  fill: white;
+  stroke: black;
+  stroke-width: 0.25vh;
 }
 
 .ticks {
