--- a/public/style.css
+++ b/public/style.css
@@ -27,6 +27,10 @@
   fill: black;
   text-anchor: middle; }
 
+#bar-chart-legend {
+  height: 100%;
+  font-size: 0.83vw; }
+
 /* Overall Control and Legend Styles */
 #control-row {
   margin: 0;
@@ -36,18 +40,32 @@
   height: 100%;
   border: black 3px; }
 
-.mixer-border {
+.slider-guide {
   stroke: black;
-  fill: white; }
-
-#bar-chart-legend {
-  height: 100%;
-  font-size: 0.83vw; }
+  stroke-width: 0.25vh;
+  stroke-dasharray: 5, 5; }
 
 /* Slider Styles */
 .slider-label {
   font-size: 0.83vw;
   text-anchor: middle; }
+
+.slider-guide-text, .slider-percentage {
+  font-size: 0.83vw;
+  alignment-baseline: middle;
+  baseline-shift: -5%;
+  /* Fix the "not quite right" vertical alignment */ }
+
+.slider-guide-text {
+  text-anchor: end; }
+
+.slider-percentage {
+  text-anchor: start; }
+
+.handle-label {
+  fill: white;
+  stroke: black;
+  stroke-width: 0.25vh; }
 
 .ticks {
   font: 10px sans-serif; }
