--- a/css/style.scss
+++ b/css/style.scss
@@ -74,7 +74,7 @@ $minor-border-width: 0.25vh;
   text-anchor: middle;
 }
 
-.slider-guide-text, .slider-percentage, .total-guide-text {
+.slider-guide-text, .slider-percentage {
   font-size: $axis-legend-font-size;
   alignment-baseline: middle;
   baseline-shift: -5%; /* Fix the "not quite right" vertical alignment */
@@ -146,4 +146,6 @@ $minor-border-width: 0.25vh;
 
 .total-guide-text {
   text-anchor: start;
+  alignment-baseline: middle;
+  baseline-shift: -5%; /* Fix the "not quite right" vertical alignment */
 }
