--- a/public/style.css
+++ b/public/style.css
@@ -79,6 +79,7 @@ body {
 
 .track,
 .track-inset,
+.track-actual-setting,
 .track-overlay {
   stroke-linecap: round; }
 
@@ -88,9 +89,12 @@ body {
   stroke-opacity: 0.3;
   stroke-width: 0.52vw; }
 
-.track-inset {
+.track-inset, .track-actual-setting {
   stroke: #d9d9d9;
   stroke-width: 0.42vw; }
+
+.track-actual-setting {
+  stroke: #737373; }
 
 .track-overlay {
   pointer-events: stroke;
