--- a/css/style.scss
+++ b/css/style.scss
@@ -7,36 +7,44 @@ $minor-text-size-mobile: 1.8vmax;
 $minor-border-width: 0.1vmax;
 $background-color: #f0f0f0;
 
+/* Breakpoints */
+$xs: 768px;
+
 /* Responsive MixIns */
-@mixin minor-text {
-  @media screen and (max-width: 500px) /* Mobile */ {
+%minor-text {
+  @media screen and (max-width: $xs) /* Mobile */ {
     font-size: $minor-text-size-mobile;
   }
 
-  @media screen and (min-width: 501px) /* Desktop and Tablet */ {
+  @media screen and (min-width: $xs + 1) /* Desktop and Tablet */ {
     font-size: $minor-text-size-desktop;
   }
 }
 
-@mixin label-text {
-  @media screen and (max-width: 500px) /* Mobile */ {
+%label-text {
+  @media screen and (max-width: $xs) /* Mobile */ {
     font-size: $label-text-size-mobile;
   }
 
-  @media screen and (min-width: 501px) /* Desktop and Tablet */ {
+  @media screen and (min-width: $xs + 1) /* Desktop and Tablet */ {
     font-size: $label-text-size-desktop;
   }
 }
 
 /* Rotating itself is done in Javascript for IE compatibility */
-@mixin rotating-label {
-  @media screen and (max-width: 500px) /* Mobile */ {
+%rotating-label {
+  @media screen and (max-width: $xs) /* Mobile */ {
     text-anchor: start;
   }
 
-  @media screen and (min-width: 501px) /* Desktop and Tablet */ {
+  @media screen and (min-width: $xs + 1) /* Desktop and Tablet */ {
     text-anchor: middle;
   }
+}
+
+%vertical-centered-text {
+  alignment-baseline: middle;
+  baseline-shift: -5%; /* Fix the "not quite right" vertical alignment */
 }
 
 /* Overall Styles */
@@ -46,7 +54,6 @@ body {
 
 .vis-container {
   height: 100vh;
-
 }
 
 /* Heading Styles */
@@ -58,11 +65,11 @@ body {
 
 /* Bar Chart Styles */
 #bar-chart {
-  @media screen and (max-width: 500px) /* Mobile */ {
+  @media screen and (max-width: $xs) /* Mobile */ {
     height: 50%;
   }
 
-  @media screen and (min-width: 501px) /* Desktop and Tablet */ {
+  @media screen and (min-width: $xs + 1) /* Desktop and Tablet */ {
     height: 70%;
   }
 }
@@ -82,34 +89,42 @@ body {
 }
 
 .axis {
-  @include minor-text;
+  @extend %minor-text;
   font-weight: 500;
 }
 
 .x-axis {
-  @include rotating-label;
+  @extend %rotating-label;
 }
 
 .axis-label {
-  @include label-text;
+  @extend %label-text;
   text-anchor: middle;
   font-weight: bold;
   fill: black;
 }
 
 #bar-chart-legend {
-  @include minor-text;
   height: 100%;
+}
+
+#bar-chart-legend-xs {
+  height: 2.5%;
+}
+
+.swatch-label {
+  @extend %minor-text;
+  @extend %vertical-centered-text;
 }
 
 /* Overall Control and Legend Styles */
 #control-row {
   margin: 0;
-  @media screen and (max-width: 500px) /* Mobile */ {
+  @media screen and (max-width: $xs) /* Mobile */ {
     height: 42%;
   }
 
-  @media screen and (min-width: 501px) /* Desktop and Tablet */ {
+  @media screen and (min-width: $xs + 1) /* Desktop and Tablet */ {
     height: 22%;
   }
 }
@@ -128,14 +143,13 @@ body {
 
 /* Slider Styles */
 .slider-label {
-  @include minor-text;
-  @include rotating-label;
+  @extend %minor-text;
+  @extend %rotating-label;
 }
 
 .slider-guide-text, .slider-percentage {
-  @include minor-text;
-  alignment-baseline: middle;
-  baseline-shift: -5%; /* Fix the "not quite right" vertical alignment */
+  @extend %minor-text;
+  @extend %vertical-centered-text;
 }
 
 .slider-guide-text {
@@ -165,22 +179,22 @@ body {
 .track {
   stroke: #000;
   stroke-opacity: 0.3;
-  @media screen and (max-width: 500px) /* Mobile */ {
+  @media screen and (max-width: $xs) /* Mobile */ {
     stroke-width: 2.06vw;
   }
 
-  @media screen and (min-width: 501px) /* Desktop and Tablet */ {
+  @media screen and (min-width: $xs + 1) /* Desktop and Tablet */ {
     stroke-width: 0.52vw;
   }
 }
 
 .track-inset {
   stroke: #d9d9d9;
-  @media screen and (max-width: 500px) /* Mobile */ {
+  @media screen and (max-width: $xs) /* Mobile */ {
     stroke-width: 1.76vw;
   }
 
-  @media screen and (min-width: 501px) /* Desktop and Tablet */ {
+  @media screen and (min-width: $xs + 1) /* Desktop and Tablet */ {
     stroke-width: 0.42vw;
   }
 }
@@ -192,11 +206,11 @@ body {
 
 .track-overlay {
   pointer-events: stroke;
-  @media screen and (max-width: 500px) /* Mobile */ {
+  @media screen and (max-width: $xs) /* Mobile */ {
     stroke-width: 8.3vw;
   }
 
-  @media screen and (min-width: 501px) /* Desktop and Tablet */ {
+  @media screen and (min-width: $xs + 1) /* Desktop and Tablet */ {
     stroke-width: 2.6vw;
   }
   cursor: crosshair;
@@ -232,6 +246,6 @@ body {
 
 .total-label-text {
   @extend .slider-label;
-  @include rotating-label;
+  @extend %rotating-label;
   font-weight: 800;
 }
